Home page change
Home page change

git-archimport-id: davide@xmailserver.org--v1/libpcl--ml--0.1--patch-17

--- a/man/libpcl.html
+++ b/man/libpcl.html
@@ -14,10 +14,11 @@
 </head>
 <body
  style="color: rgb(0, 0, 255); background-color: rgb(255, 255, 255);">
-<p align="center"><font size="+1"><b>Portable Coroutine Library (PCL)</b><br>
+<p style="font-family: monospace;" align="center"><font size="+1"><b>Portable
+Coroutine Library (PCL)</b><br>
 </font></p>
-<p align="left"><font size="+1"><br>
-<small>The Portable Coroutine Library (PCL) implements the low level
+<p style="font-family: monospace;" align="left"><font size="+1"><br>
+The Portable Coroutine Library (PCL) implements the low level
 functionality for coroutines. For a definition of the term coroutine
 see <u>The
 Art of Computer Programming</u> by <u>Donald E. Knuth</u>. Coroutines
@@ -44,32 +45,38 @@ taking portable context switching ideas from the <a
 library is easily portable on almost every Unix system and on Windows.
 It can use either the ucontext.h functionalities (
 getcontext()/makecontest()/swapcontext() ) or the standard
-longjmp()/setjmp().</small><br>
-</font></p>
-<p align="center"><font size="+1"><br>
-<b><font size="+1">Documentation</font></b></font></p>
-<p align="left"><font size="+1"><small>PCL man page: <a href="pcl.html">HTML</a>
-<a href="pcl.txt">TXT</a> <a href="pcl.ps">PS</a></small><br>
+longjmp()/setjmp().<br>
+</font>
+</p>
+<p style="font-family: monospace;" align="center"><font size="+1"><br>
+<b>Documentation</b></font>
+</p>
+<p style="font-family: monospace;" align="left"><font size="+1">PCL man
+page: <a href="pcl.html">HTML</a>
+<a href="pcl.txt">TXT</a> <a href="pcl.ps">PS</a><br>
 <br>
-</font></p>
-<p align="center"><font size="+1"><font size="+1"><b>Download</b></font></font></p>
-<p align="left"><small><font size="+1"><small>Latest version : <a
- href="pcl-1.6.tar.gz">1.6</a></small></font></small></p>
-<p align="left"><font size="+1"> </font></p>
-<p align="center"><font size="+1"><font size="+1"><b>Links</b></font></font></p>
-<p align="left"><small><font size="+1"><small><a
+</font>
+</p>
+<p style="font-family: monospace;" align="center"><font size="+1"><b>Download</b></font></p>
+<p style="font-family: monospace;" align="left"><font size="+1">Latest
+version : <a href="pcl-1.6.tar.gz">1.6</a></font></p>
+<p style="font-family: monospace;" align="left"> </p>
+<p style="font-family: monospace;" align="center"><font size="+1"><b>Links</b></font></p>
+<p style="font-family: monospace;" align="left"><font size="+1"><a
  href="http://freshmeat.net/projects/libpcl/">FreshMeat
 Home Page</a><br>
 <a href="http://www.gnu.org/software/pth">GNU Pth library</a><br>
 <a href="rse-pmt.pdf">Very nice paper about portable multi-threading</a><br>
-</small></font></small></p>
-<p align="left"><small><font size="+1"><small><br>
-</small></font></small></p>
-<p align="left"><small><font size="+1"><small><br>
-<a href="davide.html">Back Home</a><br>
-</small></font></small></p>
-<p align="left"><font size="+1"><br>
+</font>
+</p>
+<p style="font-family: monospace;" align="left"><font size="+1"><br>
 </font></p>
-<p align="left"><font size="+1"> </font></p>
+<p style="font-family: monospace;" align="left"><font size="+1"><br>
+<a href="davide.html">Back Home</a><br>
+</font>
+</p>
+<p style="font-family: monospace;" align="left"><font size="+1"><br>
+</font></p>
+<p style="font-family: monospace;" align="left"> </p>
 </body>
 </html>
