Home page change
Home page change

git-archimport-id: davide@xmailserver.org--v1/libpcl--ml--0.1--patch-18

--- a/man/libpcl.html
+++ b/man/libpcl.html
@@ -14,10 +14,10 @@
 </head>
 <body
  style="color: rgb(0, 0, 255); background-color: rgb(255, 255, 255);">
-<p style="font-family: monospace;" align="center"><font size="+1"><b>Portable
+<p style="font-family: monospace;" align="center"><b>Portable
 Coroutine Library (PCL)</b><br>
-</font></p>
-<p style="font-family: monospace;" align="left"><font size="+1"><br>
+</p>
+<p style="font-family: monospace;" align="left"><br>
 The Portable Coroutine Library (PCL) implements the low level
 functionality for coroutines. For a definition of the term coroutine
 see <u>The
@@ -46,37 +46,33 @@ library is easily portable on almost every Unix system and on Windows.
 It can use either the ucontext.h functionalities (
 getcontext()/makecontest()/swapcontext() ) or the standard
 longjmp()/setjmp().<br>
-</font>
 </p>
-<p style="font-family: monospace;" align="center"><font size="+1"><br>
-<b>Documentation</b></font>
+<p style="font-family: monospace;" align="center"><br>
+<b>Documentation</b>
 </p>
-<p style="font-family: monospace;" align="left"><font size="+1">PCL man
+<p style="font-family: monospace;" align="left">PCL man
 page: <a href="pcl.html">HTML</a>
 <a href="pcl.txt">TXT</a> <a href="pcl.ps">PS</a><br>
 <br>
-</font>
 </p>
-<p style="font-family: monospace;" align="center"><font size="+1"><b>Download</b></font></p>
-<p style="font-family: monospace;" align="left"><font size="+1">Latest
-version : <a href="pcl-1.6.tar.gz">1.6</a></font></p>
+<p style="font-family: monospace;" align="center"><b>Download</b></p>
+<p style="font-family: monospace;" align="left">Latest
+version : <a href="pcl-1.6.tar.gz">1.6</a></p>
 <p style="font-family: monospace;" align="left"> </p>
-<p style="font-family: monospace;" align="center"><font size="+1"><b>Links</b></font></p>
-<p style="font-family: monospace;" align="left"><font size="+1"><a
+<p style="font-family: monospace;" align="center"><b>Links</b></p>
+<p style="font-family: monospace;" align="left"><a
  href="http://freshmeat.net/projects/libpcl/">FreshMeat
 Home Page</a><br>
 <a href="http://www.gnu.org/software/pth">GNU Pth library</a><br>
 <a href="rse-pmt.pdf">Very nice paper about portable multi-threading</a><br>
-</font>
 </p>
-<p style="font-family: monospace;" align="left"><font size="+1"><br>
-</font></p>
-<p style="font-family: monospace;" align="left"><font size="+1"><br>
+<p style="font-family: monospace;" align="left"><br>
+</p>
+<p style="font-family: monospace;" align="left"><br>
 <a href="davide.html">Back Home</a><br>
-</font>
 </p>
-<p style="font-family: monospace;" align="left"><font size="+1"><br>
-</font></p>
+<p style="font-family: monospace;" align="left"><br>
+</p>
 <p style="font-family: monospace;" align="left"> </p>
 </body>
 </html>
