--- a/man/pcl.html
+++ b/man/pcl.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML><HEAD><TITLE>Man page of PCL</TITLE>
-</HEAD><BODY text="#0000FF" bgcolor="#FFFFFF">
+</HEAD><BODY text="#0000FF" bgcolor="#FFFFFF" style="font-family: monospace;">
 <H1>PCL</H1>
 Section: Portable Coroutine Library (3)<BR>Updated: 1.6<BR><A HREF="#index">Index</A>
 <A HREF="/cgi-bin/man/man2html">Return to Main Contents</A><HR>
@@ -323,6 +323,6 @@ Bug reports and comments to Davide Libenzi &lt;
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 01:53:23 GMT, January 03, 2006
+Time: 18:36:37 GMT, March 19, 2007
 </BODY>
 </HTML>
