--- a/man/pcl.html
+++ b/man/pcl.html
@@ -26,6 +26,7 @@ co_create, co_call, co_resume, co_delete, co_exit_to, co_exit, co_current - C co
 <B>void co_exit_to(coroutine_t </B><I>co</I><B>);</B>
 <B>void co_exit(void);</B>
 <B>coroutine_t co_current(void);</B>
+<B>void *co_get_data(coroutine_t </B><I>co</I><B>);</B>
 </PRE>
 
 <P>
@@ -240,6 +241,20 @@ restarted it after a prior
 <P>
 This function returns the currently running coroutine.
 <P>
+<DT><B>void *co_get_data(coroutine_t </B><I>co</I><B>);</B>
+
+<DD>
+<P>
+This function returns the data associated with the
+<I>co</I>
+
+<BR>&nbsp;coroutine.&nbsp;The&nbsp;data&nbsp;associated&nbsp;with&nbsp;a&nbsp;coroutine&nbsp;is&nbsp;the
+<I>data</I>
+
+parameter passed to
+<B>co_create</B>().
+
+<P>
 </DL>
 <A NAME="lbAF">&nbsp;</A>
 <H3>Notes</H3>
@@ -362,9 +377,13 @@ GNU Pth library at
 Developed by Davide Libenzi &lt;
 <B><A HREF="mailto:davidel@xmailserver.org">davidel@xmailserver.org</A></B> &gt;.
 
+<BR>
+
 Ideas and man page base source taken by the coroutine library developed by
 E. Toernig &lt;
 <B><A HREF="mailto:froese@gmx.de">froese@gmx.de</A></B> &gt;.
+
+<BR>
 
 Also some code and ideas comes from the GNU Pth library available at
 <B><A HREF="http://www.gnu.org/software/pth/">http://www.gnu.org/software/pth/</A></B> .
@@ -402,6 +421,6 @@ Bug reports and comments to Davide Libenzi &lt;
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 02:54:41 GMT, January 18, 2010
+Time: 03:34:15 GMT, January 19, 2010
 </BODY>
 </HTML>
